--- a/_config.yml
+++ b/_config.yml
@@ -13,33 +13,33 @@ collections:
     output: false
 subtitle: Join The Last Show
 email: freakshowlarp@gmail.com
-description: Freak Show is a LARP about the final days of the last freak show. It
-  is a story of a family of outcasts and freaks who have no other place to go. They
-  are trying to survive in a changing world even though their time has already passed.
-  It is a romantic horror story in the gothic style. The game will end with the final
-  song of the last performance of the freak circus and with the devil coming to take
-  them all to perform for him forever.
-baseurl: 
-url: http://freakshowlarp.siteleaf.net/
-author: 
-street_address: 
-city: 
-state: 
-zip_code: 
-country: 
-phone: 
+description: Freak Show is a LARP and a work of art that explores otherness. The participants
+  will experience the last days and the final performance of the freak show. This is
+  a romantic horror story in the gothic style, about a family of outcasts and freaks
+  struggling to survive in a hostile world. The freaks have made a deal with the promise
+  of sanctuary and are practising for their performance, but what is the cost? In the end,
+  as the last song fades away, the devil will come to take them all to perform for him forever.
+baseurl:
+url: http://freakshow.co/
+author:
+street_address:
+city:
+state:
+zip_code:
+country:
+phone:
 tiles-source: pages
 tiles-count: 20
-500px_url: 
+500px_url:
 facebook_url: https://www.facebook.com/groups/freakshowlarp/
-github_url: 
-gitlab_url: 
-googleplus_url: 
-instagram_url: 
-linkedin_url: 
-pinterest_url: 
-slack_url: 
-twitter_url: 
+github_url:
+gitlab_url:
+googleplus_url:
+instagram_url:
+linkedin_url:
+pinterest_url:
+slack_url:
+twitter_url:
 markdown: kramdown
 sass:
   sass_dir: _sass
