--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ collections:
 subtitle: Join The Last Show
 email: freakshowlarp@gmail.com
 description: Freak Show is a LARP and a work of art that explores otherness. The participants
-  will experience the last days and the final performance of the freak show. This is
+  will experience the last days and the final performance of the last freak show. This is
   a romantic horror story in the gothic style, about a family of outcasts and freaks
   struggling to survive in a hostile world. The freaks have made a deal with the promise
   of sanctuary and are practising for their performance, but what is the cost? In the end,
