--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,7 @@ collections:
     output: true
 subtitle: Join The Last Show
 email: freakshowlarp@gmail.com
-description: Freak Show is a LARP and a work of art that explores otherness. The participants
-  will experience the last days and the final performance of the last freak show.
-  This is a romantic horror story in the gothic style, about a family of outcasts
-  and freaks struggling to survive in a hostile world. The freaks have made a deal
-  with the promise of sanctuary and are practising for their performance, but what
-  is the cost? In the end, as the last song fades away, the devil will come to take
-  them all to perform for him forever.
+description: Freak Show is a larp held in an abandoned amusement park in Finland in September 2017. It tells the story of the last freak show and explores otherness through a romantic gothic horror setting. A family of outcasts and freaks struggle to survive in a hostile world. In the end, as the last song fades away, the devil will come to take them all to perform for him forever.
 baseurl: 
 url: http://freakshow.co/
 author: 
